--- a/java/springboot-test/pom.xml
+++ b/java/springboot-test/pom.xml
@@ -14,9 +14,31 @@
         <version>1.5.9.RELEASE</version>
     </parent>
     <dependencies>
+
+        <dependency>
+            <groupId>org.raven.data.entity</groupId>
+            <artifactId>raven-data-entity</artifactId>
+            <version>0.0.1</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/libs/raven-data-entity-0.0.1.jar</systemPath>
+        </dependency>
+
+        <dependency>
+            <groupId>org.raven.mongodb.repository</groupId>
+            <artifactId>raven-mongodb-repository</artifactId>
+            <version>0.0.1</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/libs/raven-mongodb-repository-0.0.1.jar</systemPath>
+        </dependency>
+
+        <!-- org.springframework.boot -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
     </dependencies>
     <build>
@@ -31,6 +53,16 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
             </plugin>
         </plugins>
     </build>
